--- a/ansible-lab/genie-test.yml
+++ b/ansible-lab/genie-test.yml
@@ -15,5 +15,5 @@
 
   - name: Print Structured Data
     debug:
-      msg: "{{ arp_output['stdout'][0] | parse_genie(command='show arp vrf Mgmt-intf', os='iosxe') }}"
+      msg: "{{ arp_output['stdout'][0] | parse_genie(command='show ip arp', os='ios') }}"
     delegate_to: localhost
