--- a/ansible-lab/genie-test.yml
+++ b/ansible-lab/genie-test.yml
@@ -10,10 +10,10 @@
 
   - name: Get Data From Device
     ios_command:
-      commands: show ip arp
+      commands: show version
     register: arp_output
 
   - name: Print Structured Data
     debug:
-      msg: "{{ arp_output['stdout'][0] | parse_genie(command='show ip arp', os='ios') }}"
+      msg: "{{ arp_output['stdout'][0] | parse_genie(command='show version', os='ios') }}"
     delegate_to: localhost
